<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ge.gpavliashvili.messenger.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="ge.gpavliashvili.messenger.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/mainFragment"
        android:name="ge.gpavliashvili.messenger.ui.main.MainFragment"
        android:label="@string/conversations"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_users"
            app:destination="@id/usersFragment" />
        <action
            android:id="@+id/action_main_to_chat"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_main_to_profile"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_main_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="ge.gpavliashvili.messenger.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/usersFragment"
        android:name="ge.gpavliashvili.messenger.ui.users.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_users_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_users_to_chat"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="ge.gpavliashvili.messenger.ui.chat.ChatFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_chat_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation> 